# parqstream

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  test.yml
assets/: parqstream.psd
benchmarks/: bench_throughput.py  generate_data.py  plot_results.py  run.sh  utils.py
python/parqstream/: __init__.py
python/tests/: conftest.py  test_dataset.py  test_loader.py  test_loader_checkpoint.py  test_loader_distributed.py  test_loader_shuffle.py
src/: batch.rs  buffer.rs  checkpoint.rs  dataloader.rs  dataset.rs  distributed.rs  error.rs  lib.rs  loader.rs  pipeline.rs  position.rs  reader.rs  ring_buffer.rs
