[package]
name = "parqstream"
version = "0.1.0"
edition = "2021"

[lib]
name = "parqstream"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58", features = ["ffi"] }
parquet = "58"

pyo3 = { version = "0.28", features = ["abi3-py38"] }

crossbeam-channel = "0.5"

rand = "0.10"

thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
