[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "parqstream"
version = "0.1.0"
description = "High-performance tabular dataloader for deep learning"
requires-python = ">=3.11,<3.14"
dependencies = ["numpy", "pyarrow"]

[project.optional-dependencies]
dev = ["maturin", "pytest"]
bench = ["maturin"]
build_wheel = ["maturin[zig]"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "parqstream._parqstream"
